# setfit-pytorch-lightning

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
configs/callbacks/: model_checkpoint.yaml
configs/datamodule/: setfit.yaml
configs/experiment/: example.yaml
configs/hparams_search/: setfit_optuna.yaml
configs/model/: setfit_nn.yaml  setfit_sklearn.yaml
configs/trainer/: default.yaml
documents/: Implemented_strategy.md
notebooks/: model_load.ipynb
src/datamodules/: setfit_datamodule.py
src/models/: setfit_module.py
src/utils/: callbacks.py  utils.py
tests/: conftest.py  test_datamodule.py  test_sweeps.py  test_train.py
